fix: update scrollbar thumb styles for improved aesthetics and usability; adjust dimensions and color

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -454,14 +454,14 @@ html::-webkit-scrollbar-thumb:hover {
   background: repeating-linear-gradient(
       to bottom,
       #3e3e3e 0px,
-      #aaa 4px,
-      #3a7d6a 4px,
-      #2d2d2d 8px
+      #aaa 6px,
+      #3a7d6a 6px,
+      #2d2d2d 9px
     ),
     linear-gradient(to bottom, #d0d0d0, #0f0f0f);
   border: 1px solid #777;
-  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
-  color: rgb(130, 126, 156);
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.4);
+  color: #a2b5b5;
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -470,7 +470,6 @@ html::-webkit-scrollbar-thumb:hover {
   pointer-events: all;
   user-select: none;
   font-weight: bold;
-  filter: contrast(1.2);
 }
 .section-class {
   position: relative;
